# Battle-Squares

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.cache/clangd/index/: AABB.cpp.2A5EFD9ABC5EF33E.idx  AABB.hpp.DCEEC99C4EDE3274.idx  Buffer.cpp.B6FB7CDF85F4C65C.idx  Buffer.hpp.0A511DE02110FA73.idx  Mat4.cpp.0497EA16AE5F818F.idx  Mat4.hpp.0D5A148572E547DC.idx  Shader.cpp.1C8345977B12E8F3.idx  Shader.hpp.7E6CB3A66CE6E625.idx  Texture.cpp.D25C93D15EC60A1E.idx  Texture.hpp.9B0FD44C5845B1E6.idx  Transform.cpp.96AD70DB207EABBD.idx  Transform.hpp.53872DCA11C3031B.idx  Vec2.cpp.C9DC25013D0E417A.idx  Vec2.hpp.B5A0BB874FB0D275.idx  Vec4.cpp.F81DC84039BDDAF6.idx  Vec4.hpp.3FF1954125BB9C7D.idx  boing.c.1FA59CADAE0BF483.idx  clipboard.c.4A9F3FEC9CE82DE1.idx  context.c.85062B450A9FE2D2.idx  cursor.c.AB12894B7BF8CBEB.idx  egl_context.c.61F4C1B45FC02B18.idx  egl_context.h.E44992AB641FAC85.idx  empty.c.D157089486EB4D62.idx  events.c.BC05750711D87E29.idx  gamma.c.47E1810A19F964B5.idx  (+63 more)
assets/shaders/: default.frag  default.vert  particles.frag  particles.vert
include/: Buffer.hpp  Input.hpp  ParticleEmitter.hpp  ParticleSystem.hpp  Physics.hpp  PhysicsBody.hpp  Player.hpp  Shader.hpp  Sound.hpp  Texture.hpp  Timestep.hpp
include/math/: AABB.hpp  Mat4.hpp  RayHit.hpp  Transform.hpp  Vec2.hpp  Vec4.hpp  math.hpp
src/: Buffer.cpp  Input.cpp  ParticleEmitter.cpp  ParticleSystem.cpp  Physics.cpp  PhysicsBody.cpp  Player.cpp  Shader.cpp  Sound.cpp  Texture.cpp  particle.lua
src/math/: AABB.cpp  Mat4.cpp  Transform.cpp  Vec2.cpp  Vec4.cpp  math.cpp
